# randa

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json
.github/workflows/: action.yml
help/: sqlite.md
help/script/: transaction-history.json  transaction-history.sh
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  rust-toolchain  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: def.rs  httpclient.rs  main.rs  utils.rs
src/components/: Foo.vue  Hello.vue
src/components/cbase/: FileDialog.vue
src/components/footer/: Footer.vue
src/components/header/: DragArea.vue  Header.vue  Nmenu.vue  RBar.vue
src/components/main/: About.vue  Homepage.vue  Main.vue  Orderpage.vue
src/components/main/eth/: AddrBalance.vue  AddrGen.vue  HistoryTransaction.vue  Wallet.vue
src/components/main/eth/tool/: ENS.vue  Tool.vue
src/components/main/eth/wallet/: AddressBook.vue  GenWallet.vue  SendDialog.vue  Wallet.vue
src/components/main/setting/: Eth.vue
src/components/main/setting/eth/: APIKey.vue  AddressBook.vue  Eth.vue  Network.vue
src/js/: db.js  gs.js  store.js  utils.js
