[package]
name = "randa"
version = "0.0.1"
description = "A Tauri App under developement"
authors = ["heng30"]
license = "MIT"
repository = "https://github.com/Heng30/randa"
edition = "2021"
keywords = ["tauri", "element3", "Rust", "Vu3",]

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
log = "0.4"
env_logger = "0.9"
platform-dirs = "0.3"
chrono = "0.4"
serde_derive = "1.0.139"
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dependencies.tauri-plugin-sqlite]
git = "https://github.com/lzdyes/tauri-plugin-sqlite"
tag = "v0.1.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

